<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/purple_200"
    tools:context=".SelfCheck"
    >
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/selfcheck"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">


        <TextView
            android:id="@+id/t2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/selfcheck"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.cardview.widget.CardView

                    android:id="@+id/btnalcohol"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/alcohol" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bloodalcohol"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.cardview.widget.CardView

                    android:id="@+id/btnbmi"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/bmi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bmi"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.cardview.widget.CardView

                    android:id="@+id/btnbodyfat"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/bodyfat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bodyfat"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout3"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.cardview.widget.CardView

                    android:id="@+id/btnidealweight"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/idealweight" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/idealweight"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>









